// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CountCard should render with count 1`] = `
<div
  className="countCard"
  style={
    Object {
      "padding": "10px 10px 0 10px",
    }
  }
>
  <span
    className="countCardCount"
    style={
      Object {
        "color": "#8e8e8e",
      }
    }
  >
    10
  </span>
  <div
    className="countCardTitle"
    style={
      Object {
        "margin": "",
      }
    }
  >
    Service
  </div>
</div>
`;

exports[`should render CountCard should render with counts 1`] = `
<div
  className="countCard"
  style={
    Object {
      "padding": "0px 5px",
    }
  }
>
  <span
    className="countCardCount"
    style={
      Object {
        "color": "#7ed321",
      }
    }
  >
    <div
      className="countCardInner"
    >
      <div
        className="countCardInnerCount"
        style={
          Object {
            "color": "#fff",
          }
        }
      >
        10
      </div>
      <div
        className="countCardTitle"
        style={
          Object {
            "marginTop": "-6px",
          }
        }
      >
        HTTP
      </div>
    </div>
    <div
      className="countCardInner"
    >
      <div
        className="countCardInnerCount"
        style={
          Object {
            "color": "#8e8e8e",
          }
        }
      >
        10
      </div>
      <div
        className="countCardTitle"
        style={
          Object {
            "marginTop": "-6px",
          }
        }
      >
        TCP
      </div>
    </div>
  </span>
  <div
    className="countCardTitle"
    style={
      Object {
        "margin": "-4px 0 0 0",
      }
    }
  >
    Service
  </div>
</div>
`;

exports[`should render CountCard should render with disable type 1`] = `
<div
  className="countCard"
  style={
    Object {
      "padding": "10px 10px 0 10px",
    }
  }
>
  <span
    className="countCardCount"
    style={
      Object {
        "color": "#f1f8ff",
      }
    }
  >
    10
  </span>
  <div
    className="countCardTitle"
    style={
      Object {
        "margin": "",
      }
    }
  >
    Service
  </div>
</div>
`;

exports[`should render CountCard should render with down type 1`] = `
<div
  className="countCard"
  style={
    Object {
      "padding": "10px 10px 0 10px",
    }
  }
>
  <span
    className="countCardCount"
    style={
      Object {
        "color": "#ff2e48",
      }
    }
  >
    10
  </span>
  <div
    className="countCardTitle"
    style={
      Object {
        "margin": "",
      }
    }
  >
    Service
  </div>
</div>
`;

exports[`should render CountCard should render with partial type 1`] = `
<div
  className="countCard"
  style={
    Object {
      "padding": "10px 10px 0 10px",
    }
  }
>
  <span
    className="countCardCount"
    style={
      Object {
        "color": "#f5a623",
      }
    }
  >
    10
  </span>
  <div
    className="countCardTitle"
    style={
      Object {
        "margin": "",
      }
    }
  >
    Service
  </div>
</div>
`;

exports[`should render CountCard should render with unknow type 1`] = `
<div
  className="countCard"
  style={
    Object {
      "padding": "10px 10px 0 10px",
    }
  }
>
  <span
    className="countCardCount"
    style={
      Object {
        "color": "#ffba47",
      }
    }
  >
    10
  </span>
  <div
    className="countCardTitle"
    style={
      Object {
        "margin": "",
      }
    }
  >
    Service
  </div>
</div>
`;

exports[`should render CountCard should render with up type 1`] = `
<div
  className="countCard"
  style={
    Object {
      "padding": "10px 10px 0 10px",
    }
  }
>
  <span
    className="countCardCount"
    style={
      Object {
        "color": "#7ed321",
      }
    }
  >
    10
  </span>
  <div
    className="countCardTitle"
    style={
      Object {
        "margin": "",
      }
    }
  >
    Service
  </div>
</div>
`;
